--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
-<html> lang="en">
-<head>
-         <meta charset="UTF-8">
-         <meta name="viewport" content="width=device-width, initial-scale>
-          <title>Git Projeto</title>
-</head>
-<body>
-                <h1>This is my github repo first file.</h1>
 
-</body>
-</html>
+# DIO | Resumos Git e Github
+
+Repositório para armazenar resumos sobre Git e Github do curso versionamento de código Git e Github da [Digital Innovation One](https://web.dio.me/).
+
+## 📜 Documentação
+• [Documentação Git](https://git-scm.com/doc).
+
+• [Documentação Github](https://docs.github.com/).
+
+## 💻 Resumos das Aulas
+
+| Aulas | Resumos |
+| -------- | -------------- |
+| Gravando alterações no repositório local | [Resumos]() |
+
+---
+git init
+---
+
+## 🔍 Referências 
+• [Digital Innovation One]().
