--- a/index.html
+++ b/index.html
@@ -1,22 +1,67 @@
 
-# DIO | Resumos Git e Github
+# Seja Bem Vindo 
 
-Repositório para armazenar resumos sobre Git e Github do curso versionamento de código Git e Github da [Digital Innovation One](https://web.dio.me/).
+| Assembleia | Ministério | Ipiranga |
+| ----------- | ---------- | ----------- |
 
-## 📜 Documentação
-• [Documentação Git](https://git-scm.com/doc).
+[Ipiranga Nova Veneza](https://www.instagram.com/adi.novaveneza1?igsh=MTQ0anczcjlzcDIybQ==)
 
-• [Documentação Github](https://docs.github.com/).
+## Localização
+      • CEP: 13178 - 194
+      • Rua Francisco Salustiano da Silva N° 150 Jardim Volobueff
 
-## 💻 Resumos das Aulas
+## 📖 Hora da Palavra
+       • Desde domingo foi em 
+       • Hebreus 9: 4, 5 e 6.
 
-| Aulas | Resumos |
-| -------- | -------------- |
-| Gravando alterações no repositório local | [Resumos]() |
-
+--- 
+Pastor Cleber Oliveira 
 ---
-git init
----
 
-## 🔍 Referências 
-• [Digital Innovation One]().
+
+## 📆 Agenda Semanal 
+ | Segunda |
+ | ------- |
+
+• Aula de Música 
+19:30
+
+| Terça |
+| ------ |
+
+• Ensaio com Jovens / visita Pastoral
+19:30 
+
+| Quarta |
+| -------- |
+
+• Oração e Ensino
+19:30
+
+| Quinta |
+| ------  |
+
+• Ensaio com as Irmãs 
+19:30
+
+| Sexta |
+| ------ |
+
+• Ensaio com a Banda
+20:00
+
+| Sábado |
+| ------- |
+
+• Consagração pela manhã 
+   07:00
+• Culto de Santa Ceia 
+19:00
+
+| Domingo |
+| -------- |
+
+• Culto na Praça 
+10:00
+• Culto com Família 
+18:00
